Activate UseCGroupMemoryLimitForHeap and MaxRAMFraction